--- a/sakila-app/build.gradle
+++ b/sakila-app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile ('mysql:mysql-connector-java')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.springframework.boot:spring-boot-starter-actuator')
 	implementation('org.springframework.boot:spring-boot-starter-web-services')
 //	implementation('org.flywaydb:flyway-core')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
