--- a/sakila-app/src/main/resources/application.properties
+++ b/sakila-app/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost:3306/sakila
 spring.datasource.username=test
 spring.datasource.password=test
+
+server.servlet.path=/api
+server.port=8811
