--- a/sakila-app/src/main/resources/application.properties
+++ b/sakila-app/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://localhost:3306/sakila
+spring.datasource.url=jdbc:mysql://sakila-db-fly:6603/sakila
 spring.datasource.username=test
 spring.datasource.password=test
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 server.servlet.path=/api
 server.port=8811
