--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.4'
 services:
   gitlab:
     image: gitlab/gitlab-ce:latest
@@ -55,5 +55,37 @@ services:
         aliases:
           - sakila
   
+  sakila-db-fly:
+    container_name: sakila-db-fly
+    image: mysql:5.7.23
+    restart: always
+    ports:
+      - 6603:3306
+    environment:
+      MYSQL_DATABASE: "sakila"
+      MYSQL_USER: "test"
+      MYSQL_PASSWORD: "test"
+      MYSQL_ROOT_PASSWORD: "root"
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+    volumes:
+      - /Users/zawadzkibartek/mysql/datadir-fly:/var/lib/mysql
+    networks:
+      internal:
+        aliases:
+          - sakila-db-fly
+
+  sakila-app:
+    container_name: sakila-app
+    depends_on:
+      - sakila-db-fly
+    build:
+      dockerfile: Dockerfile
+      context: sakila-app/
+    restart: always
+    ports:
+      - 8811:8811
+    networks:
+      - internal
+      
 networks:
   internal:
