--- a/sakila-app/build.gradle
+++ b/sakila-app/build.gradle
@@ -1,22 +1,23 @@
 buildscript {
-	ext {
-		springBootVersion = '2.0.5.RELEASE'
-		swaggerVersion = '2.9.2'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '2.0.5.RELEASE'
+        swaggerVersion = '2.9.2'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
 plugins {
-	id 'io.franzbecker.gradle-lombok' version '1.8'
-	id 'java'
+    id 'io.franzbecker.gradle-lombok' version '1.8'
+    id 'java'
 }
 
 apply plugin: 'java'
+apply plugin: 'groovy'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
@@ -26,33 +27,38 @@ version = ''
 sourceCompatibility = 1.8
 
 repositories {
-	mavenCentral()
-}
-
-configurations {
-	jar.archiveName = 'sakila-app.jar'
+    mavenCentral()
 }
 
 dependencies {
-	compile ("mysql:mysql-connector-java")
-	compile("org.springframework.boot:spring-boot-devtools")
-	compile("org.codehaus.groovy:groovy-all:2.5.2")
-	compile('org.flywaydb:flyway-core:4.2.0')
-	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-	implementation('org.springframework.boot:spring-boot-starter-web')
-	implementation('org.springframework.boot:spring-boot-starter-actuator')
-	implementation('org.springframework.boot:spring-boot-starter-web-services')
-	implementation("io.springfox:springfox-swagger2:${swaggerVersion}")
-	implementation("io.springfox:springfox-swagger-ui:${swaggerVersion}")
-	testImplementation('org.springframework.boot:spring-boot-starter-test')
-	testCompile("org.testcontainers:testcontainers:1.9.1")
-	testCompile("org.testcontainers:mysql:1.9.1")
-	testCompile("org.spockframework:spock-core:1.2-groovy-2.5")
-	testCompile("org.spockframework:spock-spring:1.2-groovy-2.5")
-	testCompile 'com.jayway.restassured:rest-assured:2.9.0'
-	testCompile 'org.assertj:assertj-core:1.5.0'
-	testRuntime('com.athaydes:spock-reports:1.2.7')
+    compile("mysql:mysql-connector-java",
+            "org.springframework.boot:spring-boot-devtools",
+            "org.codehaus.groovy:groovy-all:2.5.2",
+            'org.flywaydb:flyway-core:4.2.0'
+    )
+    implementation(
+            'org.springframework.boot:spring-boot-starter-data-jpa',
+            'org.springframework.boot:spring-boot-starter-web',
+            'org.springframework.boot:spring-boot-starter-actuator',
+            'org.springframework.boot:spring-boot-starter-web-services',
+            "io.springfox:springfox-swagger2:${swaggerVersion}",
+            "io.springfox:springfox-swagger-ui:${swaggerVersion}"
+    )
+    testCompile(
+            'org.springframework.boot:spring-boot-starter-test',
+            "org.testcontainers:testcontainers:1.9.1",
+            "org.testcontainers:mysql:1.9.1",
+            "org.spockframework:spock-core:1.2-groovy-2.5",
+            "org.spockframework:spock-spring:1.2-groovy-2.5",
+            "com.jayway.restassured:rest-assured:2.9.0",
+            "org.assertj:assertj-core:1.5.0"
+    )
 }
 
 ext['groovy.version'] = '2.5.0'
 
+test {
+    testLogging {
+        showStandardStreams = true
+    }
+}
