--- a/sakila-app/.gitignore
+++ b/sakila-app/.gitignore
@@ -151,5 +151,8 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+#JAXB
+/schema
+
 
 # End of https://www.gitignore.io/api/java,macos,gradle,intellij+all
