--- a/sakila-app/build.gradle
+++ b/sakila-app/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath 'com.github.jacobono:gradle-jaxb-plugin:1.3.5'
     }
 }
 
@@ -21,6 +22,7 @@ apply plugin: 'groovy'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.github.jacobono.jaxb'
 
 group = 'eu.sii.pl'
 version = ''
@@ -30,11 +32,15 @@ repositories {
     mavenCentral()
 }
 
+
+
 dependencies {
     compile("mysql:mysql-connector-java",
             "org.springframework.boot:spring-boot-devtools",
             "org.codehaus.groovy:groovy-all:2.5.2",
-            'org.flywaydb:flyway-core:4.2.0'
+            'org.flywaydb:flyway-core:4.2.0',
+            'wsdl4j:wsdl4j:1.6.2'
+
     )
     implementation(
             'org.springframework.boot:spring-boot-starter-data-jpa',
@@ -53,6 +59,24 @@ dependencies {
             "com.jayway.restassured:rest-assured:2.9.0",
             "org.assertj:assertj-core:1.5.0"
     )
+
+    jaxb 'com.sun.xml.bind:jaxb-xjc:2.2.7-b41'
+    jaxb 'com.sun.xml.bind:jaxb-impl:2.2.7-b41'
+    jaxb 'javax.xml.bind:jaxb-api:2.2.7'
+    jaxb "org.jvnet.jaxb2_commons:jaxb2-basics-ant:0.6.5"
+    jaxb "org.jvnet.jaxb2_commons:jaxb2-basics:0.6.4"
+    jaxb "org.jvnet.jaxb2_commons:jaxb2-basics-annotate:0.6.4"
+    jaxb "org.jvnet.jaxb2_commons:jaxb2-value-constructor:3.0"
+}
+
+jaxb {
+
+    System.setProperty('javax.xml.accessExternalSchema', 'all')
+    xsdDir = "src/main/resources/schema/"
+    xjc {
+        taskClassname = "org.jvnet.jaxb2_commons.xjc.XJC2Task"
+        args = ["-Xsetters","-Xsetters-mode=direct"]
+    }
 }
 
 ext['groovy.version'] = '2.5.0'
