--- a/sakila-app/src/main/resources/application.properties
+++ b/sakila-app/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://sakila-db-fly:3306/sakila
 spring.datasource.username=test
 spring.datasource.password=test
+spring.datasource.continue-on-error=true
+
+logging.level.eu.sii.pl.sakilaapp=INFO
 
 server.servlet.path=/api
 server.port=8811
